Fix Nav taking up space on mobile front page

--- a/web/components/Nav/Nav.module.css
+++ b/web/components/Nav/Nav.module.css
@@ -48,6 +48,11 @@
     box-shadow: none;
   }
 
+  .nav.onFrontPage {
+    /* Avoid GridWrapper taking up vertical space */
+    height: 0;
+  }
+
   .menuButtonWrapper {
     display: block;
     text-align: center;
